Major fix... So much stuff I don't even want to describe.